# ckt_sim

./: .gitignore  CMakeLists.txt  README.md  arquivo.txt  fonte.net  inputName.txt  main.cpp
app/: main.cpp
app/aula01/: Aula01_program.cpp  Aula01_program.h
app/circuit/: Circuit.cpp  Circuit.h
app/components/: AmpOp.cpp  AmpOp.h  Capacitor.cpp  Capacitor.h  Component.cpp  Component.h  ComponentType.h  CurrentControlledCurrentSource.cpp  CurrentControlledCurrentSource.h  CurrentControlledVoltageSource.cpp  CurrentControlledVoltageSource.h  CurrentSource.cpp  CurrentSource.h  DCCurrentSource.cpp  DCCurrentSource.h  DCVoltageSource.cpp  DCVoltageSource.h  FlipFlop.cpp  FlipFlop.h  Inductor.cpp  Inductor.h  Key.h  LinearResistorByParts.cpp  LogicAnd.cpp  LogicAnd.h  LogicNand.cpp  LogicNand.h  LogicNor.cpp  LogicNor.h  LogicOr.cpp  LogicOr.h  Monostable.cpp  Monostable.h  PulseCurrentSource.cpp  PulseCurrentSource.h  PulseParameters.cpp  PulseParameters.h  PulseVoltageSource.cpp  PulseVoltageSource.h  Reset.cpp  (+16 more)
app/fileReader/: FileReader.cpp  FileReader.h
app/fileWriter/: FileWriter.cpp  FileWriter.h
app/netlist/: GaussDecomposition.cpp  GaussDecomposition.h  InitializationMethod.h  Netlist.cpp  (+11 more)
input/: arquivo.net  arquivo.res  arquivo.txt  arquivo_cktsim.tab  blumlein.cir  blumlein.net  blumlein2.net  blumlein2_cktsim.tab  descarregando.net  descarregando.tab  descarregando_cktsim.tab  descarregando_miguel.tab  fonte.net  fonte.tab  fonte_cktsim.tab  fontesimples.net  fontesimples.tab  fontesimples_cktsim.tab  tanqueLC.net  tanqueLC.tab  tanqueLC_cktsim.tab
(+33 files in other folders)
